# tandemn-tuna

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY_ISSUES.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SKILL.md  clawhub.json  e2e_state_machine_test.py  hybrid-gpu-inference-orchestrator-for-online-inference.md  modal_vllm_server.py  pyproject.toml  requirements.txt  test_scaling.yaml
.claude/: settings.local.json
docs/: baseten-integration-plan.md  cold-start-benchmark-plan.md  kv-aware-routing-research.md  live-pricing-plan.md  routing-overflow-strategies.md
tandemn/: __main__.py  catalog.py  models.py  orchestrator.py  scaling.py  state.py
tandemn/providers/: base.py  cloudrun_provider.py  modal_provider.py  registry.py  runpod_provider.py
tandemn/router/: meta_lb.py
tandemn/spot/: sky_launcher.py
templates/: modal_vllm_server.py.tpl  router.yaml.tpl  skyserve_vllm.yaml.tpl  vllm_serve_cmd.txt
tests/: test_azure_provider.py  test_baseten_provider.py  test_benchmark_cold_start.py  test_benchmark_load_test.py  test_benchmark_log_watchers.py  test_benchmark_providers.py  test_byoc_cli.py  test_catalog.py  test_cerebrium_provider.py  test_cli_destroy.py  test_cloudrun_preflight.py  test_cloudrun_provider.py  test_cost_tracking.py  test_meta_lb.py  test_modal_provider.py  test_models.py  test_orchestrator.py  test_registry.py  test_runpod_provider.py  test_scaling.py  test_serverless_only.py  test_show_gpus_savings.py  test_sky_launcher.py  test_sky_sdk.py  test_state.py  test_template_engine.py  test_ui.py
tuna/: __main__.py  catalog.py  models.py  orchestrator.py  scaling.py  sky_sdk.py  state.py  template_engine.py  ui.py
tuna/benchmark/: aiperf_runner.py  benchmark.md  cold_start.py  load_test.py  log_watchers.py  providers.py  trace_generator.py
tuna/providers/: azure_provider.py  base.py  baseten_provider.py  cerebrium_provider.py  cloudrun_provider.py  modal_provider.py  registry.py  runpod_provider.py
tuna/router/: meta_lb.py  replica_watcher.sh
tuna/spot/: sky_launcher.py
tuna/templates/: README.md  baseten_config.yaml.tpl  vllm_serve_cmd.txt
tuna/templates/baseten/: README.md  config.yaml.tpl
tuna/templates/cerebrium/: cerebrium.toml.tpl
tuna/templates/modal/: README.md  vllm_server.py.tpl
tuna/templates/shared/: README.md  router.yaml.tpl  vllm_serve_cmd.txt
tuna/templates/skyserve/: README.md  byoc.yaml.tpl  vllm.yaml.tpl
