[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tandemn"
version = "0.1.0"
description = "Hybrid GPU Inference Orchestrator — serverless for cold starts, spot for scale"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "gunicorn>=21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
cloudrun = ["google-cloud-run>=0.10.0"]

[project.scripts]
tandemn = "tandemn.__main__:main"

[tool.setuptools.packages.find]
include = ["tandemn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
